lec 15 almost done

--- a/07_Ch_8_Iteration/092-Markov_Chains.ipynb
+++ b/07_Ch_8_Iteration/092-Markov_Chains.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "title: 8.2 Markov Processes\n",
     "subject:  Iteration\n",
-    "subtitle: \n",
+    "subtitle: transitioning with short-term memory\n",
     "short_title: 8.2 Markov Processes\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -45,7 +45,10 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- what is a Markov chain model using a weather prediction example\n",
+    "- what is a probability vector and a transition matrix (regular)\n",
+    "- when does a Markov chain converge to a unique probability vector\n",
+    "- how the eigenvalue and eigenvector of the transition matrix relates to the convergence of the Markov chain "
    ]
   },
   {
@@ -149,7 +152,7 @@
     "\n",
     ":::{prf:theorem}\n",
     ":label: regular_thm\n",
-    "If $P$ is a [regular transition matrix](#regular_defn), then it admits a unique probability vector $\\vv x^*$ with eigenvalue $\\lambda_1=1$. Moreover, a Markov chain with coefficient matrix $P$ will converge to $\\vv x^*: \\vv x(k) \\to \\vv x^*$ as $k \\to \\infty$.\n",
+    "If $P$ is a [regular transition matrix](#regular_defn), then it admits a unique _probability eigenvector_ $\\vv x^*$ with eigenvalue $\\lambda_1=1$. Moreover, a Markov chain with coefficient matrix $P$ will converge to $\\vv x^*: \\vv x(k) \\to \\vv x^*$ as $k \\to \\infty$.\n",
     ":::\n",
     "\n",
     "This is a very exciting development! It tells us that we can understand the long-term behavior of a regular Markov chain by solving for the eigenvector $\\vv x^*$ associated with the eigenvalue $\\lambda_1=1$ of $P$.\n",
@@ -171,235 +174,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{prf:example} Get out the vote!\n",
+    ":label: vote_eg\n",
+    "Suppose the voting results of a congressional election at a certain voting precinct are represented by a vector $\\vv x \\in \\mathbb{R}^3$:\n",
     "\n",
+    "\\begin{equation}\n",
+    "\\label{voting_vec_type}\n",
+    "\\vv x = \\bm \\% \\ \\text{voting Democratic (D)} \\\\\n",
+    "    \\% \\ \\text{voting Reupublican (R)} \\\\\n",
+    "    \\% \\ \\text{voting Libertarian (LD)} \\em\n",
+    "\\end{equation}\n",
     "\n",
-    "Example: Get out the vote!\n",
-    "\n",
-    "Suppose the voting results of a congressional election at a certain voting precinct are represented by a vector x ∈ ℝ³:\n",
-    "\n",
-    "x = [% voting Democratic (D)]\n",
-    "    [% voting Republican (R)]\n",
-    "    [% voting Libertarian (L)]\n",
-    "\n",
-    "We record the outcome of this election every two years by a vector of this type, and let's assume that the outcome of one election depends only on results of the previous one. Then the sequence x(k) of vectors that describe the votes in each election form a Markov chain. Suppose, using historical data, we estimate the following transition matrix P:\n",
-    "\n",
-    "        From:\n",
-    "        D   R   L   To:\n",
-    "    [.7  .1  .3] D\n",
-    "P ≈ [.2  .8  .3] R\n",
-    "    [.1  .1  .4] L\n",
-    "\n",
+    "We record the outcome of this election every two years by a vector of [this](#voting_vec_type) type, and let's assume that the outcome of one election depends only on results of the previous one. Then the sequence $\\vv x(k)$ of vectors that describe the votes in each election form a Markov chain. Suppose, using historical data, we estimate the following transition matrix P:\n",
+    "$$\n",
+    "& \\quad \\quad \\text{From:} \\\\\n",
+    "& \\quad \\begin{matrix} \\text{D}  & \\text{R} &  \\text{L} & \\text{To:} \\end{matrix} \\\\                 \n",
+    "P =& \\bm .7 & .1 & .3 \\\\ \n",
+    "            .2 & .8 & .3 \\\\ \n",
+    "    .1 & .1 & .4 \\em \\quad \\begin{matrix}  \\text{D} \\\\ \\text{R} \\\\ \\text{L} \\end{matrix}\n",
+    "$$\n",
     "The entries in the first column, labeled D, describe what % of persons who voted D in the last election will vote D, R, and L in this one: in this example, 70% of prior D voters will vote D again, 20% will vote R, and 10% will vote L.\n",
     "\n",
-    "If we assume that P remains fixed across many elections, we can predict not only the next election's results, but long-term election results as well. For example, if last election had results:\n",
-    "\n",
-    "x(0) = [.55]\n",
-    "       [.40]\n",
-    "       [.05]\n",
+    "If we assume that $P$ remains fixed across many elections, we can predict not only the next election's results, but long-term election results as well. For example, if last election had results:\n",
+    "$$\n",
+    "\\vv x(0) = \\bm .55 \\\\ .40 \\\\ .05 \\em\n",
+    "$$\n",
     "\n",
     "then the next election will have a likely outcome of\n",
     "\n",
-    "x(1) = P x(0) ≈ [.44]\n",
-    "               [.445]\n",
-    "               [.115]\n",
+    "$$\n",
+    "\\vv x(1) = P \\vv x(0) = \\bm .44 \\\\ .445 \\\\ .115 \\em\n",
+    "$$\n",
     "\n",
     "and the following election will have likely outcome\n",
+    "$$\n",
+    "\\vv x(2) = P \\vv x(1) = \\bm .387 \\\\ .4785  \\\\ .1345 \\em\n",
+    "$$\n",
     "\n",
-    "x(2) ≈ Px(1) ≈ [.387]\n",
-    "              [.475]\n",
-    "              [.1345]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In the long run, we expect vectors converge to the steady state distribution $\\vv x^*$ satisfying $\\vv x^* = P\\vv x^*$, which we obtain by solving:\n",
+    "$$\n",
+    "(P - I)\\vv = \\vv 0\n",
+    "$$\n",
     "\n",
-    "In the long run, we expect when converge to the steady state distribution $\\pi^*$ satisfying $\\pi^* = P\\pi^*$, which we obtain by solving:\n",
+    "and setting $\\vv x^* = \\frac{1}{\\v 1^{\\top} \\vv v} \\vv v$. In this case, this works out to:\n",
     "\n",
-    "\\[(P - I)\\pi = 0\\]\n",
+    "$$\n",
+    "\\vv x^* \\approx \\begin{bmatrix} 0.321 \\\\ 0.536 \\\\ 0.143 \\end{bmatrix}\n",
+    "$$\n",
     "\n",
-    "and setting $\\pi^* = \\frac{\\pi}{\\sum \\pi}$. In this case, this works out to:\n",
-    "\n",
-    "\\[\\pi^* \\approx \\begin{bmatrix} 0.521 \\\\ 0.336 \\\\ 0.143 \\end{bmatrix}\\]\n",
-    "\n",
-    "which informs that assuming voter patterns do not change, 52.1\\% of voters will go to D, 33.6\\% to R, and 14.3\\% to I in this precinct.\n",
-    "\n",
-    "\\textbf{Random Walks, Page Rank, and the Google Matrix}\n",
-    "\n",
-    "An internet user's behavior while surfing the web can be modeled as a Markov chain that captures a random walk on a graph. We start with a simple example of this, and then explain how it can be used to design a search engine.\n",
-    "\n",
-    "Consider the following graph:\n",
-    "\n",
-    "\\begin{center}\n",
-    "\\includegraphics[scale=0.5]{figure4}\n",
-    "\\end{center}\n",
-    "\n",
-    "Which has seven vertices interconnected by edges. Let's pretend this graph models a very simple internet: each vertex (or node) is a webpage and each edge is a hyperlink connecting page to each other. (For now we assume that if page i links to page j, then page j also links to page i, but this isn't necessary.) We assume that if a user is on page i, they will click on one of the hyperlinks uniformly at random. For example, if a user is on page 5, they will visit page 3 next 50\\% of the time and page 6 next 50\\% of the time. Similarly, if a user is on page 3, they will visit page 1, 2, or 4 next 33\\% of the time each.\n",
-    "\n",
-    "We can model this user behavior using a Markov chain, which is called a simple random walk on a graph. The transition matrix for this graph is given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\[\n",
-    "P = \\begin{bmatrix}\n",
-    "0 & 1/3 & 1/4 & 0 & 0 & 0 & 0 \\\\\n",
-    "1/2 & 0 & 1/4 & 1 & 1/2 & 0 & 0 \\\\\n",
-    "1/2 & 1/3 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
-    "0 & 0 & 1/4 & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & 1/3 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
-    "0 & 0 & 1/4 & 0 & 1/2 & 0 & 1 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 & 1/3 & 0\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "This allows us to answer questions such as the following: suppose 100 users start on page 6. After each user clicks on three hyperlinks, what \\% of users do we expect to find on each new page. The solution is given by setting our initial user distribution to:\n",
-    "\n",
-    "\\[\n",
-    "x(0) = \\begin{bmatrix}\n",
-    "0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 0 \\\\ 1 \\\\ 0\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "and computing $x(3) = P^3x(0) = \\begin{bmatrix}\n",
-    ".0833 \\\\ .0417 \\\\ .4028 \\\\ 0 \\\\ .2778 \\\\ 0 \\\\ .1944\n",
-    "\\end{bmatrix}$\n",
-    "\n",
-    "This tells, for example, that 40.28\\% of users starting on page 6 end up on page 3 after 3 hyperlink clicks.\n",
-    "\n",
-    "\\textbf{PageRank}\n",
-    "\n",
-    "The founders of Google, Sergey Brin and Lawrence Page, reasoned that important pages had links coming from other \"important\" pages, and thus, a typical internet user would spend more time on more important pages, and less time on less important pages. This can be captured by the steady state distribution $\\pi^*$ of the Markov chain we described above. Using this model, we can say that a typical user will spend $\\pi^*_i$ \\% of their time on page $i$. This is precisely the observation used to define the PageRank algorithm, which Google uses to rank the importance of the webpages it catalogs.\n",
-    "\n",
-    "\\textbf{Key Idea:} The importance of a webpage $i$ can be measured by the corresponding entry $\\pi^*_i$ of the steady state vector $\\pi^*$ of the Markov chain describing the behavior of a typical internet user."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, if a typical transition matrix $P$ describing the internet were regular, we would be done - we simply compute $\\pi^* = P\\pi^*$ and use $\\pi^*$ to rank webpages. Unfortunately, typical models of the web are directed graphs, which lead to non-regular transition matrices $P$. To address this, Google makes two adjustments, which we illustrate with the following slight modification of our previous example:\n",
-    "\n",
-    "\\begin{figure}[h]\n",
-    "\\centering\n",
-    "\\includegraphics[width=0.3\\textwidth]{figure1}\n",
-    "\\caption{A seven-page Web}\n",
-    "\\end{figure}\n",
-    "\n",
-    "\\[\n",
-    "P = \\begin{bmatrix}\n",
-    "0 & 1/2 & 0 & 0 & 0 & 0 & 0 \\\\\n",
-    "0 & 0 & 1/3 & 0 & 1/2 & 0 & 0 \\\\\n",
-    "1 & 0 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
-    "0 & 0 & 1/3 & 1 & 0 & 0 & 0 \\\\\n",
-    "0 & 1/2 & 0 & 0 & 0 & 1/3 & 0 \\\\\n",
-    "0 & 0 & 1/3 & 0 & 1/2 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 & 1/3 & 1\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "The first issue that arises here is that pages 4 and 7 are dangling nodes: if a user ever ends up on page 4 or 7, they never leave as there are no outgoing links. This means that columns 4 and 7 never change as we compute $P^k$, and hence $P$ cannot be regular. To handle dangling nodes, the following adjustment is made:\n",
-    "\n",
-    "\\textbf{Adjustment 1:} If an internet user reaches a dangling node, they will pick any page on the web with equal probability and move to that page.\n",
-    "\n",
-    "This means that if state $j$ is an absorbing state, we replace column $j$ of $P$ with the vector $(1/n, ..., 1/n)$. For example, our modified transition matrix is now:\n",
-    "\n",
-    "\\[\n",
-    "P_* = \\begin{bmatrix}\n",
-    "0 & 1/2 & 0 & 1/7 & 0 & 0 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
-    "1 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 0 & 0 & 1/7 \\\\\n",
-    "0 & 1/2 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
-    "0 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "While this helps eliminate dangling nodes, we may still not have a regular transition matrix, as there might still be cycles of pages. For example, if page $i$ only links to page $j$, and page $j$ only links to page $i$, a user entering either page is condemned to moving back and forth between the two pages. This means the corresponding columns of $P_*^k$ will always have zeros in them, and hence $P_*$ would not be regular."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\\textbf{Adjustment 2:} Pick a number $p$ between 0 and 1. If a user is on page $i$, then $p$ proportion of the time they will pick from all possible hyperlinks on that page with equal probability and move to that page. The other $1-p$ fraction of the time, they will pick any page on the web with equal probability and move to that page.\n",
-    "\n",
-    "In terms of the modified transition matrix $P_*$, the new transition matrix will be\n",
-    "\n",
-    "\\[G = pP_* + (1-p)E,\\]\n",
-    "\n",
-    "where $E \\in \\mathbb{R}^{n \\times n}$ and $E_{ij} = 1/n$ for $i,j=1,...,n$. The matrix $G$ is called the Google matrix. $G$ is easily seen to be regular, as all entries of $G$ are positive.\n",
-    "\n",
-    "Although any value of $p$ is valid, Google is thought to use $p \\approx 0.85$. For our example, the Google matrix is\n",
-    "\n",
-    "\\[\n",
-    "G = .85\\begin{bmatrix}\n",
-    "0 & 1/2 & 0 & 1/7 & 0 & 0 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
-    "1 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 0 & 0 & 1/7 \\\\\n",
-    "0 & 1/2 & 0 & 1/7 & 0 & 1/3 & 1/7 \\\\\n",
-    "0 & 0 & 1/3 & 1/7 & 1/2 & 0 & 1/7 \\\\\n",
-    "0 & 0 & 0 & 1/7 & 0 & 1/3 & 1/7\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "\\[\n",
-    "+ .15\\begin{bmatrix}\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 \\\\\n",
-    "1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7 & 1/7\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "\\[\n",
-    "= \\begin{bmatrix}\n",
-    ".021429 & .446429 & .021429 & .142857 & .021429 & .021429 & .142857 \\\\\n",
-    ".021429 & .021429 & .304762 & .142857 & .446429 & .021429 & .142857 \\\\\n",
-    ".871429 & .021429 & .021429 & .142857 & .021429 & .304762 & .142857 \\\\\n",
-    ".021429 & .021429 & .304762 & .142857 & .021429 & .021429 & .142857 \\\\\n",
-    ".021429 & .446429 & .021429 & .142857 & .021429 & .304762 & .142857 \\\\\n",
-    ".021429 & .021429 & .304762 & .142857 & .446429 & .021429 & .142857 \\\\\n",
-    ".021429 & .021429 & .021429 & .142857 & .021429 & .304762 & .142857\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "We can now compute the steady state vector $\\pi^* = G\\pi^*$, which is found to be:\n",
-    "\n",
-    "\\[\n",
-    "\\pi^* = \\begin{bmatrix}\n",
-    ".116293 \\\\\n",
-    ".168567 \\\\\n",
-    ".191263 \\\\\n",
-    ".098844 \\\\\n",
-    ".164054 \\\\\n",
-    ".168567 \\\\\n",
-    ".092413\n",
-    "\\end{bmatrix}\n",
-    "\\]\n",
-    "\n",
-    "Thus, we can rank the pages in terms of descending importance as: 3, 2, 6, 5, 1, 4, 7."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ":::{note}\n",
-    "The Google matrix for the world wide web has over 8 billion rows and columns, and computing $\\vv x^* = G \\vv x^*$ is a very non-trivial task. An iterative approach known as the power method is used in practice, and typically takes several days for Google to compute a new $\\vv x^*$, which it does every month. \n",
-    "\n",
-    "**TO DO**: accessible links to power method description\n",
-    ":::"
+    "which informs that assuming voter patterns do not change, 32.1\\% of voters will go to D, 53.6\\% to R, and 14.5\\% to I in this precinct."
    ]
   },
   {
