--- a/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
+++ b/08_Ch_9_Symmetric_Matrices/101-eigen_symm.ipynb
@@ -242,6 +242,122 @@
     "\n",
     "[Insert figure for rotated ellipse/hyperbola here]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The principle axes of these rotated graphs are defined by the eigenvectors of $k$, and amount to a new coordinate system (or change of basis) with respect to which the graph is in standard position.\n",
+    "\n",
+    "\\textbf{Example:} The ellipse in Fig. 3a is the graph of equation $5x_1^2 - 4x_1x_2 + 5x_2^2 = 48$. This is given by the quadratic form\n",
+    "\n",
+    "\\[q(x) = x^T k x = \\begin{bmatrix} x_1 \\\\ x_2 \\end{bmatrix}^T \\begin{bmatrix} 5 & -2 \\\\ -2 & 5 \\end{bmatrix} \\begin{bmatrix} x_1 \\\\ x_2 \\end{bmatrix}.\\]\n",
+    "\n",
+    "The eigenvalues/vectors of $k$ are:\n",
+    "\n",
+    "\\[\\lambda_1 = 3, \\quad v_1 = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\quad \\text{and} \\quad \\lambda_2 = 7, \\quad v_2 = \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}.\\]\n",
+    "\n",
+    "We define the orthonormal basis: $u_1 = \\frac{v_1}{\\|v_1\\|} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}$ and $u_2 = \\frac{v_2}{\\|v_2\\|} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix}$\n",
+    "\n",
+    "and set $Q = [u_1 \\quad u_2] = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 & -1 \\\\ 1 & 1 \\end{bmatrix}$. Then $q(x) = x^T Q \\Lambda Q^T x$, and the change of variables $y = Q^T x$ produces the quadratic form\n",
+    "\n",
+    "\\[q(y) = y^T \\Lambda y = 3y_1^2 + 7y_2^2.\\]\n",
+    "\n",
+    "These axes are shown in Fig 3a (labeled $y_1$ and $y_2$).\n",
+    "\n",
+    "\\textbf{Classifying Quadratic Forms}\n",
+    "\n",
+    "Depending on the eigenvalues of the symmetric matrix $k$ defining a quadratic form $q(x) = x^T k x$, the resulting function can look very different. The figure below shows four different quadratic forms plotted as functions with domain $\\mathbb{R}^2$, i.e., we are plotting $(x, y, q(x,y))$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that except for $x = 0$, the values $q(x)$ are all positive in Fig. 4(b) and all negative in Fig. 4(a). If we take horizontal cross-sections of these plots, we get an ellipse (these are the level sets $C_k$ we saw earlier), the vertical cross-sections of $q(x)$ are hyperbolas.\n",
+    "\n",
+    "This simple 2D example illustrates the following definitions. A quadratic form $Q$ is:\n",
+    "\\begin{enumerate}\n",
+    "    \\item[(a)] positive definite if $q(x) > 0$ for all $x \\neq 0$\n",
+    "    \\item[(b)] negative definite if $q(x) < 0$ for all $x \\neq 0$\n",
+    "    \\item[(c)] indefinite if $q(x)$ assumes both positive and negative values.\n",
+    "\\end{enumerate}\n",
+    "\n",
+    "Also, $q(x)$ is said to be positive (negative) semidefinite if $q(x) \\geq 0$ ($\\leq 0$) $\\forall x$. In particular, we now allow $q(x) = 0$ for nonzero $x$.\n",
+    "\n",
+    "The following theorem leverages the spectral factorization of a symmetric matrix to characterize quadratic forms in terms of the eigenvalues of $k$.\n",
+    "\n",
+    "\\textbf{Theorem:} Let $k = k^T \\in \\mathbb{R}^{n \\times n}$ be a symmetric $n \\times n$ matrix. Then a quadratic form is\n",
+    "\\begin{enumerate}\n",
+    "    \\item[(a)] positive definite if and only if all eigenvalues of $k$ are positive,\n",
+    "    \\item[(b)] negative definite if and only if all eigenvalues of $k$ are negative,\n",
+    "    \\item[(c)] indefinite if and only if $k$ has both positive and negative eigenvalues.\n",
+    "\\end{enumerate}\n",
+    "\n",
+    "\\textbf{Proof:} Let $k = Q \\Lambda Q^T$ be the spectral factorization of $k$: $Q$ has columns defining an orthonormal eigenbasis for $\\mathbb{R}^n$ and $\\Lambda = \\text{diag}(\\lambda_1, \\ldots, \\lambda_n)$ is a diagonal matrix of eigenvalues of $k$. Then:\n",
+    "\n",
+    "\\[q(x) = x^T k x = x^T Q \\Lambda Q^T x = (Q^T x)^T \\Lambda (Q^T x) = y^T \\Lambda y\\]\n",
+    "\\[\\underbrace{y}_y \\underbrace{y}_y\\]\n",
+    "\\[= \\lambda_1 y_1^2 + \\cdots + \\lambda_n y_n^2. \\qquad (*)\\]\n",
+    "\n",
+    "Since $Q$ is orthogonal, there is a one-to-one correspondence between all nonzero $x$ and nonzero $y$ ($y = Q^T x$, $x = Qy$).\n",
+    "\n",
+    "Thus, the values of $q(x)$ for $x \\neq 0$ coincide with the values of $(*)$: the sign of $q(x)$ is therefore controlled by the signs of the eigenvalues $\\lambda_1, \\ldots, \\lambda_n$ as described in the theorem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The classification of a quadratic form is used to also classify the matrix $k$ defining it. Thus, a positive definite matrix is a symmetric matrix for which the quadratic form $q(x) = x^T k x$ is positive definite, or equivalently, for which all of its eigenvalues are positive (by the theorem above). Equivalent definitions are defined for negative definite, positive/negative semidefinite, and indefinite matrices.\n",
+    "\n",
+    "\\textcolor{red}{WARNING: The condition that $k$ is positive definite, i.e., that $k > 0$, does NOT mean that all of the entries of $k$ are positive --- in fact, many matrices with all positive entries are NOT positive definite!}\n",
+    "\n",
+    "Example: Is $q(x) = 3x_1^2 + 2x_2^2 + x_3^2 + 4x_1x_2 + 4x_2x_3$ a positive definite quadratic form? We construct $k$ as before:\n",
+    "\n",
+    "\\[q(x) = x^T k x = \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}^T \\begin{bmatrix} 3 & 2 & 0 \\\\ 2 & 2 & 2 \\\\ 0 & 2 & 1 \\end{bmatrix} \\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}.\\]\n",
+    "\n",
+    "The eigenvalues of $k$ are $5, 2,$ and $-1$, so $k$ is an indefinite matrix and $q(x)$ is an indefinite quadratic form. This is the case even though all entries of $k$ are positive!\n",
+    "\n",
+    "\\textbf{Optimization Principles for Eigenvalues of Symmetric Matrices}\n",
+    "\n",
+    "For symmetric matrices, we've seen that we can interpret eigenvalues as stretching of a vector in the directions specified by the eigenvectors. This is most clearly visualized in terms of a unit ball being mapped to an ellipsoid, as we illustrated earlier.\n",
+    "\n",
+    "We can use this observation to answer questions such as: what direction is stretched the most by matrix? Or the least? Understanding these questions is essential in areas such as machine learning (which directions are most sensitive to measurement noise or estimation error), control theory (which directions are easiest/hardest to move my system in), and in dimensionality reduction (which directions \"explain\" most of my data)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These questions all have a flavor of optimization to them: we are looking for directions with the \"most\" or \"least\" effect. This motivates a study of eigenvalues of symmetric matrices from an optimization perspective.\n",
+    "\n",
+    "We'll start with the simple case of a real diagonal matrix $\\Lambda = \\text{diag}(\\lambda_1, \\ldots, \\lambda_n)$. We assume that the diagonal entries, which are the eigenvalues of $\\Lambda$ (why?), appear in decreasing order:\n",
+    "\n",
+    "\\[\\lambda_1 \\geq \\lambda_2 \\geq \\cdots \\geq \\lambda_n\\]\n",
+    "\n",
+    "so that $\\lambda_1$ is the largest and $\\lambda_n$ is the smallest.\n",
+    "\n",
+    "The effect of $\\Lambda$ on a vector $y$ is to multiply its entries by the corresponding diagonal elements: $\\Lambda y = (\\lambda_1 y_1, \\ldots, \\lambda_n y_n)$. Clearly, the maximal stretch occurs in the $e_1$ direction, while the minimal (or least positive) stretch occurs in the $e_n$ direction.\n",
+    "\n",
+    "The key idea of the optimization principle for extremal (smallest or biggest) eigenvalues is the following geometric observation. Let's look at the associated quadratic form\n",
+    "\n",
+    "\\[q(y) = y^T \\Lambda y = \\lambda_1 y_1^2 + \\cdots + \\lambda_n y_n^2\\]\n",
+    "\n",
+    "Suppose that we are asked to pick a vector $y$ on the unit sphere, i.e., a $y$ satisfying $\\|y\\|^2 = 1$, that makes $q(y)$ as big or small as possible. We can then measure how much $y$ has been stretched by looking at the ratio $q(y) = \\frac{q(y)}{\\|y\\|^2} = \\|\\Lambda y\\|^2$.\n",
+    "\n",
+    "So let's first look at the maximal direction: this means we are looking for $\\|y\\| = 1$ that maximizes $q(y) = \\lambda_1 y_1^2 + \\cdots + \\lambda_n y_n^2$. Since $\\lambda_1 \\geq \\lambda_i$, we have that\n",
+    "\n",
+    "\\[q(y) = \\lambda_1 y_1^2 + \\cdots + \\lambda_n y_n^2 \\leq \\lambda_1 (y_1^2 + \\cdots + y_n^2) = \\lambda_1\\]\n",
+    "\n",
+    "and $q(e_1) = \\lambda_1$. This means that\n",
+    "\n",
+    "\\[\\lambda_1 = \\max \\{ q(y) \\mid \\|y\\| = 1 \\}. \\qquad (\\text{Max})\\]\n",
+    "\n",
+    "We can use the same reasoning to find that\n",
+    "\n",
+    "\\[\\lambda_n = \\min \\{ q(y) \\mid \\|y\\| = 1 \\}. \\qquad (\\text{Min})\\]\n"
+   ]
   }
  ],
  "metadata": {
